@@ -6,7 +6,8 @@ Copyright (C) 2000-2012  Stephane Fillod, and others
 Please send Hamlib bug reports to hamlib-developer@lists.sourceforge.net
 
 Version 1.2.15
-	* New models: TT-599 Eagle, IC-RX7, IC-1275, HiQSDR, ADAT ADT-200A
+	* New models: TT-599 Eagle, IC-RX7, IC-1275, HiQSDR, ADAT ADT-200A,
+		DttSP UDP
 	* New rotator backends: Celestron (telescope mount)
 	* Fixes and features: K3
 
